force-app/main/default/objects/WhatsappDanone__Whatsapp_Respuesta_automatica__mdt/WhatsappDanone__Whatsapp_Respuesta_automatica__mdt.object-meta.xml
<CustomObject>
    <label>Whatsapp Respuesta automatica</label>
    <pluralLabel>Whatsapp Respuesta automatica</pluralLabel>
</CustomObject>