force-app/main/default/objects/WhatsappDanone__Whatsapp_Respuesta_automatica__mdt/fields/WhatsappDanone__Mensaje_caso_cerrado__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Mensaje_caso_cerrado__c</fullName>
    <label>Mensaje caso cerrado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>