force-app/main/default/objects/WhatsappDanone__Whatsapp_Respuesta_automatica__mdt/fields/WhatsappDanone__Mensaje_horario_laboral__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Mensaje_horario_laboral__c</fullName>
    <label>Mensaje horario laboral</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>